@startuml
'https://plantuml.com/class-diagram
hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company {
-designation
}
class Ship{
-mmsiCode
-name
-imoCode
-numberEnergyGenerators
-generatorPower
-callSign
-vesselType
-length
-width
-capacity
-draft
}

class ShipLocation {
-baseDateTime
-latitude
-longitude
-sog
-cog
-heading
-position
-transceiver
}

Company "1"--"1..*" Ship : own
Ship "1" -- "1..*" ShipLocation : has >
@enduml